[WebAuthN] Don't cleanup on pending requests

Fix bug introduced when refactoring the cleanup logic. Duplicate requests
shouldn't close any pending requests.

Bug: 818219
Change-Id: I6da3851b7810b25b32c1e03f051e3be80a65dd28
Reviewed-on: https://chromium-review.googlesource.com/946558
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Commit-Queue: Kim Paulhamus <kpaulhamus@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540589}
Former-commit-id: be0eefc9e733a17b79e10689a95a3d125f71a8c8